# design-iii

./: .gitignore  .travis.yml  PinSTM.xlsx  README.md  astylerc  hard_config.txt  matlab_sample_30_90.mat  run-tests.sh
ArduinoUno/: adcUno.ino
Roues Motrices/: ADCArduino.ino  ADCArduino2.ino  Consigne_cap.slx  Robot_mobile.m  Sim_Robot_mobile.mdl
acceptation-tests/: vision_test.c
autotools/: configure.ac
dependencies/: opencv.pc
diagrams/: class-diagram.uxf
dockertest/: Dockerfile  README.md  build-docker  build-docker.sh  run  run.sh  runtest.sh  showlog.sh
intelligence/: TYPHOON_FRAMEWORK.md  coverage.sh  runtest.sh
matlab/: cmd_acquis.m  iden.fig  iden1_03-20.mat  iden2_03-20.mat  matlab_identification.mat  matlab_speed_test_pi.mat  slow1_iden.mat  slow2_iden.mat  slow3_iden.mat  speedtestpi.fig
robot/: SERVICES_TO_DISABLE.txt  clean.sh  convertvariablestosnake.sh  coverage.sh  deploy.sh  publish.sh  restart.sh  robot-main.c  runtest.sh
shared/: Communication.c  Communication.h  CommunicationStructures.h  Defines.h  network.c  protocol.c  protocol.h
src/: app.ui  makefile  resources.c  station-main  station-main.c  ui.gresource.xml  ui_app.c  ui_app.h  ui_event.c  ui_window.c  ui_window.h  vision.c  vision.h  world_vision.c
test/: execute_test.sh  run_test.sh  vision_test.c
test_programs/: control_robot.py
tests/: tests.sh
ui/: clean.sh  deploy.sh  logger.c  logger.h  makefile  point_types.c  point_types.h  resources.c  start.sh  station-main  station-main.c  test_and_check_coverage.sh  ui_builder.c  ui_builder.h  ui_event.c  ui_event.h  (+4 more)
(+336 files in other folders)
